# mapnn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  graph.cpp  graph.h  mem_pool.cpp  mem_pool.h  node.cpp  node.h
src/flat/: CMakeLists.txt  op_type.fbs  op_type_generated.h
src/kernel/: CMakeLists.txt
src/kernel/mnn/: CMakeLists.txt  mnn_kernel.h
src/kernel/mnn/cpu/: CMakeLists.txt  mnn_ConvolutionDepthwise3x3.cpp  mnn_ConvolutionTiledExecutorBasic.cpp  mnn_ConvolutionTiledExecutorBasic2.cpp  mnn_ConvolutionWinogradF23.cpp  mnn_ConvolutionWinogradF63.cpp  mnn_convolution3x3_gemm.cpp  mnn_depthwise3x3Weight.cpp  mnn_kernel.h  mnn_reorderWeight.cpp  mnn_transformWeightF23.cpp  mnn_transformWeightF63.cpp
src/kernel/ncnn/: CMakeLists.txt
src/kernel/ncnn/arm/: CMakeLists.txt  ncnn_conv1x1s1_neon.cpp  ncnn_conv1x1s1_sgemm_neon.cpp  ncnn_conv1x1s1_sgemm_pack4_neon.cpp  ncnn_conv1x1s1_sgemm_pack4to1_neon.cpp  ncnn_conv1x1s1_sgemm_pack4to1_neon_sgemm.cpp  ncnn_conv1x1s1_sgemm_transform_kernel_neon.cpp  ncnn_conv1x1s1_sgemm_transform_kernel_pack4_neon.cpp  ncnn_conv1x1s1_sgemm_transform_kernel_pack4to1_neon.cpp  ncnn_conv1x1s2_neon.cpp  ncnn_conv1x1s2_pack4_neon.cpp  ncnn_conv1x1s2_pack4to1_neon.cpp  ncnn_conv2x2s1_neon.cpp  ncnn_conv3x3s1_neon.cpp  ncnn_conv3x3s1_pack1to4_neon.cpp  ncnn_conv3x3s1_winograd64_neon4.cpp  ncnn_conv3x3s1_winograd64_neon5.cpp  ncnn_conv3x3s1_winograd64_pack4_neon.cpp  ncnn_conv3x3s1_winograd64_transform_kernel_neon.cpp  ncnn_conv3x3s1_winograd64_transform_kernel_neon5.cpp  ncnn_conv3x3s1_winograd64_transform_kernel_pack4_neon.cpp  ncnn_conv3x3s2_neon.cpp  ncnn_conv3x3s2_pack1to4_neon.cpp  ncnn_conv3x3s2_pack4_neon.cpp  ncnn_conv3x3s2_packed_neon.cpp  ncnn_conv3x3s2_transform_kernel_neon.cpp  ncnn_conv4x4s4_neon.cpp  ncnn_conv5x5s1_neon.cpp  ncnn_conv5x5s1_pack4_neon.cpp  ncnn_conv5x5s2_neon.cpp  ncnn_conv5x5s2_pack4_neon.cpp  ncnn_conv7x7s1_neon.cpp  ncnn_conv7x7s2_neon.cpp  ncnn_conv7x7s2_pack1to4_neon.cpp  ncnn_conv_im2col_sgemm_neon.cpp  ncnn_conv_im2col_sgemm_transform_kernel_neon.cpp  ncnn_conv_weight_pack1x4_neon.cpp  ncnn_conv_weight_pack4x1_neon.cpp  ncnn_conv_weight_pack4x4_neon.cpp  ncnn_convdw3x3s1_neon.cpp  (+11 more)
src/kernel/ncnn/x86_64/: CMakeLists.txt  ncnn_conv1x1s1_sse.cpp  ncnn_conv1x1s2_sse.cpp  ncnn_conv3x3s1_sse.cpp  ncnn_conv3x3s1_winograd23_sse.cpp  ncnn_conv3x3s1_winograd23_transform_kernel_sse.cpp  ncnn_conv3x3s2_sse.cpp  ncnn_conv5x5s1_sse.cpp  ncnn_conv_im2col_sgemm_sse.cpp  ncnn_conv_im2col_sgemm_transform_kernel_sse.cpp  ncnn_convdw3x3s1_sse.cpp  ncnn_convdw3x3s2_sse.cpp  ncnn_kernel.h
src/kernel/tengine/: CMakeLists.txt
src/kernel/tengine/arm32/: CMakeLists.txt  tengine_conv_2d_direct_3x3_dilation.cpp  tengine_conv_2d_dw.cpp  tengine_conv_2d_dw_dilation.cpp  tengine_conv_2d_dw_k5s1.cpp  tengine_conv_2d_dw_k5s2.cpp  tengine_conv_2d_dw_k7s1.cpp  tengine_conv_2d_dw_k7s2.cpp  tengine_conv_2d_wino.cpp  tengine_conv_2d_wino_interleave.cpp  tengine_kernel.h
src/kernel/tengine/arm64/: CMakeLists.txt  tengine_conv_2d_direct_3x3_dilation.cpp  tengine_conv_2d_dw.cpp  tengine_conv_2d_dw_3x3.cpp  tengine_conv_2d_dw_k5s1.cpp  tengine_conv_2d_dw_k5s2.cpp  tengine_conv_2d_dw_k7s1.cpp  tengine_conv_2d_dw_k7s2.cpp  tengine_conv_2d_wino.cpp  tengine_conv_2d_wino_1.cpp  tengine_conv_2d_wino_1_interleave.cpp  tengine_conv_2d_wino_interleave.cpp  tengine_conv_fast_direct.cpp  tengine_conv_fast_gemm.cpp  tengine_conv_fast_interleave.cpp  tengine_kernel.h
src/layout/: CMakeLists.txt  L111W.h  L111W_s64.h  L1CHW.h  L1VAB.h  LCHW4.h  LNCHW.h  LNHWC.h  LUVA4.h  LUVAB.h  tensor.cpp  tensor.h
src/map/: CMakeLists.txt  map_config.h.in  map_fusion_stage.cmake  map_kernel_stage.v1.cmake  map_optimal_stage.arm32.cmake  map_optimal_stage.arm64.cmake  map_optimal_stage.none.cmake  map_optimal_stage.x86_64.cmake
src/map/arm/: mnn
src/map/arm/ncnn/: map_conv1x1s1_neon.h  map_conv1x1s1_sgemm_neon.h  map_conv1x1s1_sgemm_pack4_neon.h  map_conv1x1s1_sgemm_pack4to1_neon.h  map_conv1x1s2_neon.h  map_conv1x1s2_pack4_neon.h  map_conv1x1s2_sgemm_pack4to1_neon.h  map_conv2x2s1_neon.h  map_conv3x3s1_neon.h  map_conv3x3s1_pack1to4_neon.h  map_conv3x3s1_winograd64_neon4.h  map_conv3x3s1_winograd64_neon5.h  map_conv3x3s1_winograd64_pack4_neon.h  map_conv3x3s2_neon.h  map_conv3x3s2_pack1to4_neon.h  map_conv3x3s2_pack4_neon.h  map_conv3x3s2_packed_neon.h  (+20 more)
src/net/: CMakeLists.txt  net.cpp  net.h
src/net/caffe/: CMakeLists.txt  caffe.pb.cc  caffe.pb.h  caffe.proto  caffe_model.cpp  caffe_model.h
src/net/onnx/: CMakeLists.txt  onnx.pb.cc  onnx.pb.h  onnx_model.cpp  onnx_model.h
src/ref/: CMakeLists.txt  reference.h
src/ref/cpu/: ref_CHW1_to_CHW4.cpp  ref_CHW4_to_CHW1.cpp  ref_add.cpp  ref_avg_pool.cpp  ref_batchnormal.cpp  ref_bias.cpp  ref_clip.cpp  ref_concat.cpp  ref_conv.cpp  ref_conv_transpose.cpp  ref_crop.cpp  ref_div.cpp  ref_dropout.cpp  ref_elu.cpp  ref_flatten.cpp  ref_gemm.cpp  ref_global_avg_pool.cpp  ref_global_max_pool.cpp  ref_leakyrelu.cpp  ref_lrn.cpp  ref_math.cpp  ref_max.cpp  ref_max_pool.cpp  ref_min.cpp  ref_mul.cpp  ref_mvn.cpp  ref_nop.cpp  ref_pad.cpp  ref_pow.cpp  ref_power.cpp  ref_prelu.cpp  ref_priorbox.cpp  ref_reduction.cpp  ref_relu.cpp  ref_relu6.cpp  ref_reshape.cpp  ref_resize.cpp  ref_scale.cpp  ref_shuffle_channel.cpp  ref_sigmoid.cpp  (+4 more)
src/ref/params/: LRN.h  MVN.h  argmax.h  clip.h  conv.h  crop.h  dropout.h  elu.h  flatten.h  gemm.h  leakyrelu.h  pad.h  pool.h  power.h  prelu.h  priorbox.h  reduction.h  reshape.h  resize.h  shuffle_channel.h  slice.h  transpose.h  upsample.h
src/tools/layer_debug/: CMakeLists.txt  conv_debug.h  depthwise_debug.h  groupconv_test.h  layer_debug.cpp  layer_debug.h  main.cpp
src/tools/layer_test/: CMakeLists.txt  conv_test.h  depthwise_test.h  groupconv_test.h  main.cpp  test.cpp  test.h
src/tools/model_test/: CMakeLists.txt  main.cpp
src/tools/net_test/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  bctime.h  hypothesis_test.h  kernel.h  log.h  macro.h  map.h  memory.h  model.h  operator.h  ref.h  type.h
(+137 files in other folders)
