cmake_minimum_required(VERSION 3.12)

file(GLOB src_mnn ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
add_library(kernel_mnn STATIC)
target_sources(kernel_mnn  PUBLIC  ${CMAKE_CURRENT_LIST_DIR}/mnn_kernel.h)
target_sources(kernel_mnn  PRIVATE ${src_mnn})
target_include_directories(kernel_mnn PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(kernel_mnn PRIVATE kernel::ref)
target_link_libraries(kernel_mnn PRIVATE layout)
#target_link_libraries(kernel_mnn PUBLIC OpenMP::OpenMP_CXX)
target_link_libraries(kernel_mnn PRIVATE MNNCompute MNNMath MNNCore)
if(MAPNN_BUILD_WITH_SSE42)
    target_link_libraries(kernel_mnn PRIVATE MNNSSE MNNX8664 MNNAVX)
elseif(MAPNN_BUILD_WITH_NEON)
    target_link_libraries(kernel_mnn PRIVATE MNNARM32)
elseif(MAPNN_BUILD_WITH_ASIMD)
    target_link_libraries(kernel_mnn PRIVATE MNNARM64)
endif()

target_compile_options(kernel_mnn PRIVATE -Ofast)
target_compile_options(kernel_mnn PRIVATE -ffast-math)
add_library(kernel::mnn ALIAS kernel_mnn)
